// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationSubtypeForm snapshots tests renders correctly 1`] = `
<SelectField
  autoWidth={false}
  disabled={false}
  floatingLabelText="Publication subtype"
  fullWidth={true}
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
  value={null}
>
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={true}
    focusState="none"
    insetChildren={false}
    primaryText="Publication subtype"
  />
</SelectField>
`;

exports[`PublicationSubtypeForm snapshots tests renders correctly 2 1`] = `
<SelectField
  autoWidth={false}
  disabled={false}
  floatingLabelText="Publication subtype"
  fullWidth={true}
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
  value={null}
>
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={true}
    focusState="none"
    insetChildren={false}
    primaryText="Publication subtype"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    primaryText="Research book (original research)"
    value="Research book (original research)"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    primaryText="Textbook"
    value="Textbook"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    primaryText="Edited book"
    value="Edited book"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    primaryText="Reference work, encyclopaedia, manual or handbook"
    value="Reference work, encyclopaedia, manual or handbook"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    primaryText="Creative work"
    value="Creative work"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    primaryText="Other"
    value="Other"
  />
</SelectField>
`;
